[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["wasm", "web-programming"]
description = "A fast, bump-allocated virtual DOM library."
edition = "2018"
keywords = ["virtual-dom", "vdom", "render", "bump"]
license = "MPL-2.0"
name = "dodrio"
readme = "./README.md"
repository = "https://github.com/fitzgen/dodrio"
version = "0.1.0"

[badges]
travis-ci = { repository = "fitzgen/dodrio" }

[dependencies]
bumpalo = "2.2.2"
cfg-if = "0.1.7"
futures = "0.1.25"
wasm-bindgen = "0.2.39"
wasm-bindgen-futures = "0.3.16"
js-sys = "0.3.16"
fxhash = "0.2.1"
log = { version = "0.4.6", optional = true }

[dependencies.web-sys]
version = "0.3.16"
features = [
  "console",
  "Document",
  "Element",
  "Event",
  "Node",
  "Window",
]

[dev-dependencies]
console_log = "0.1.2"
dodrio-js-api = { version = "=0.1.0", path = "./crates/js-api" }
log = "0.4.6"
wasm-bindgen-test = "0.2.39"

[dev-dependencies.web-sys]
version = "0.3.16"
features = [
  "Attr",
  "EventTarget",
  "HtmlElement",
  "NamedNodeMap",
  "NodeList",
]

[profile.release]
incremental = false
lto = true
opt-level = "s"

[workspace]
members = [
  "./crates/js-api",
  "./examples/counter",
  "./examples/game-of-life",
  "./examples/hello-world",
  "./examples/input-form",
  "./examples/js-component",
  "./examples/moire",
  "./examples/sierpinski-triangle",
  "./examples/todomvc",
]
