[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["wasm", "web-programming"]
description = "A fast, bump-allocated virtual DOM library."
edition = "2018"
keywords = ["virtual-dom", "vdom", "render", "bump"]
license = "MPL-2.0"
name = "dodrio"
readme = "./README.md"
repository = "https://github.com/fitzgen/dodrio"
version = "0.2.0"

[badges]
travis-ci = { repository = "fitzgen/dodrio" }

[lib]
path = "src/lib.rs"
bench = false

[[test]]
name = "web"
path = "tests/web/main.rs"
required-features = ["xxx-unstable-internal-use-only"]

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
required-features = ["xxx-unstable-internal-use-only"]

[features]
# Don't rely on this feature! Its behavior will change and it could go away at
# any time. This enables monkey-patching DOM methods so that we wrap them and
# trace what DOM methods are used and how many times they are invoked when
# applying our emitted change lists to the physical DOM. This is useful for
# evaluating the differences between how Dodrio applies changes from virtual
# nodes to the physical DOM versus how other virtual DOM libraries do the same.
xxx-unstable-strace = []

# Don't use this feature! It only exists for exposing otherwise-internal APIs
# for testing and benchmarks.
xxx-unstable-internal-use-only = []

[dependencies]
bumpalo = "2.6.0"
cfg-if = "0.1.10"
fxhash = "0.2.1"
js-sys = "0.3.32"
log = { version = "0.4.11", optional = true }
longest-increasing-subsequence = "0.1.0"
serde = { version = "1.0.114", optional = true }
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "console",
  "Document",
  "Element",
  "Event",
  "Node",
  "Window",
]

[dev-dependencies]
console_log = "0.2.0"
dodrio-js-api = { version = "=0.2.0", path = "./crates/js-api" }
futures = "0.3.5"
log = "0.4.11"
wasm-bindgen-test = "0.3.5"

[dev-dependencies.web-sys]
version = "0.3.32"
features = [
  "Attr",
  "EventTarget",
  "HtmlElement",
  "NamedNodeMap",
  "NodeList",
]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.3.3"

[profile.bench]
debug = true

[profile.release]
incremental = false
lto = true
opt-level = "s"

[workspace]
members = [
  "./crates/js-api",
  "./examples/counter",
  "./examples/game-of-life",
  "./examples/hello-world",
  "./examples/input-form",
  "./examples/js-component",
  "./examples/moire",
  "./examples/sierpinski-triangle",
  "./examples/todomvc",
]
