[package]
name = "dodrio-counter"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
dodrio = { path = "../.." }
log = "0.4.6"
wasm-bindgen = "0.2.42"

[dependencies.web-sys]
version = "0.3.19"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.42"
