[package]
name = "dodrio-js-component"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
dodrio = { path = "../.." }
dodrio-js-api = { path = "../../crates/js-api" }
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "Document",
  "HtmlElement",
  "Node",
  "Window",
]
