[package]
name = "dodrio-moire"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.10"
dodrio = { path = "../.." }
log = "0.4.11"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

# Optional dependencies for logging.
console_error_panic_hook = { optional = true, version = "0.1.6" }
console_log = { optional = true, version = "0.2.0" }
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Performance",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[features]
logging = [
    "console_log",
    "console_error_panic_hook",
]
