[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "dodrio-todomvc"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.9"
dodrio = { path = "../..", features = ["serde"] }
futures = "0.1.27"
js-sys = "0.3.19"
serde = { features = ["derive"], version = "1.0.92" }
serde_json = "1.0.39"
wasm-bindgen = "0.2.42"
wasm-bindgen-futures = "0.3.19"

# Optional dependencies for logging.
console_error_panic_hook = { optional = true, version = "0.1.6" }
console_log = { optional = true, version = "0.1.2" }
log = { optional = true, version = "0.4.6" }

[dependencies.web-sys]
version = "0.3.19"
features = [
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Storage",
    "Node",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.42"

[features]
logging = [
    "console_log",
    "console_error_panic_hook",
    "log",
]

[lib]
crate-type = ["cdylib"]
