[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "dodrio-todomvc"
version = "0.1.0"

[dependencies]
cfg-if = "0.1.10"
dodrio = { path = "../..", features = ["serde"] }
js-sys = "0.3.32"
serde = { features = ["derive"], version = "1.0.114" }
serde_json = "1.0.57"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

# Optional dependencies for logging.
console_error_panic_hook = { optional = true, version = "0.1.6" }
console_log = { optional = true, version = "0.2.0" }
log = { optional = true, version = "0.4.11" }

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Storage",
    "Node",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[features]
logging = [
    "console_log",
    "console_error_panic_hook",
    "log",
]

[lib]
crate-type = ["cdylib"]
