[package]
name = "dodrio-input-form"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
bumpalo = "1.0.2"
dodrio = { path = "../../.." }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.1"

[dependencies.web-sys]
version = "0.3.8"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "MouseEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
